--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
   },
   "dependencies": {
     "express": "^4.17.2",
+    "react-confetti": "^6.1.0",
     "ts-node": "^10.9.1"
   },
   "prettier": {
